--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,30 @@
 version: 2.1
 
-# commands:
+orbs: 
+  slack: circleci/slack@4.10.1
+
+commands:
+  send-notification:
+    description: Send notification to slack when a job fails and succeeds.
+    parameters:
+      channel:
+          default: $SLACK_DEFAULT_CHANNEL
+          description: |
+              Select which channel in which to post to.
+          type: string   
+    steps:
+      - run:
+          name: Send Slack Notification
+          when: on_fail
+          command: |
+            channel: <<parameters.channel>>
+            - slack/notify:
+                event: fail
+                template: basic_fail_1
+            - slack/notify:
+                event: pass
+                template: success_tagged_deploy_1
+
 #   destroy-environment:
 #     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
 #     parameters:
@@ -49,6 +73,7 @@ jobs:
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
+      - send-notification
 
   build-backend:
     docker:
@@ -66,6 +91,7 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
+      - send-notification
 
   test-frontend:
     docker:
