--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,16 @@ commands:
     description: Send custom notification to slack when a job fails and succeeds.   
     steps:
       - slack/notify:
-          event: fail
-          mentions: "@UdaPeopleDevTeam"
           custom: |
             {
               "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "Current Job: $CIRCLE_JOB"
+                  }
+                },
                 {
                   "type": "section",
                   "fields": [
@@ -20,34 +25,43 @@ commands:
                       "type": "plain_text",
                       "text": "Hello *Udapeople Dev Team*, \n\n 
                       This is to notify you that the job *${CIRCLE_JOB}* 
-                      with trigger name *${CIRCLE_USERNAME}*, committed to the repo *${CIRCLE_REPOSITORY_URL}* failed",
+                      with trigger name *${CIRCLE_USERNAME}*, committed to the repo *${CIRCLE_REPOSITORY_URL}* failed \n\n *Url:* ${CIRCLE_BUILD_URL}",
                       "emoji": true
                     }
                   ]
                 }
               ]
             }
-      - slack/notify:
-          event: pass
+          event: always
           mentions: "@UdaPeopleDevTeam"
-          custom: |
-            {
-              "blocks": [
-                {
-                  "type": "section",
-                  "fields": [
-                    {
-                      "type": "plain_text",
-                      "text": "Hello *Udapeople Dev Team*, \n\n 
-                      This is to notify you that the job *${CIRCLE_JOB}* 
-                      with trigger name *${CIRCLE_USERNAME}*, committed to the repo *${CIRCLE_REPOSITORY_URL}* was a success
-                       *Url:* ${CIRCLE_BUILD_URL}",
-                      "emoji": true
-                    }
-                  ]
-                }
-              ]
-            }
+      # - slack/notify:
+      #     event: pass
+      #     mentions: "@UdaPeopleDevTeam"
+      #     custom: |
+      #       {
+      #         "blocks": [
+      #           {
+      #             "type": "section",
+      #             "text": {
+      #               "type": "mrkdwn",
+      #               "text": "Current Job: $CIRCLE_JOB"
+      #             }
+      #           },
+      #           {
+      #             "type": "section",
+      #             "fields": [
+      #               {
+      #                 "type": "plain_text",
+      #                 "text": "Hello *Udapeople Dev Team*, \n\n 
+      #                 This is to notify you that the job *${CIRCLE_JOB}* 
+      #                 with trigger name *${CIRCLE_USERNAME}*, committed to the repo *${CIRCLE_REPOSITORY_URL}* was a success
+      #                  *Url:* ${CIRCLE_BUILD_URL}",
+      #                 "emoji": true
+      #               }
+      #             ]
+      #           }
+      #         ]
+      #       }
 
 #   destroy-environment:
 #     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
