--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,17 +15,18 @@ commands:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "Current Job: $CIRCLE_JOB"
+                    "text": "Current Job: *$CIRCLE_JOB*"
                   }
+                },
+                {
+                  "type": "divider"
                 },
                 {
                   "type": "section",
                   "fields": [
                     {
                       "type": "plain_text",
-                      "text": "Hello *Udapeople Dev Team*, \n\n 
-                      This is to notify you that the job *${CIRCLE_JOB}* 
-                      with trigger name *${CIRCLE_USERNAME}*, committed to the repo *${CIRCLE_REPOSITORY_URL}* failed \n\n *Url:* ${CIRCLE_BUILD_URL}",
+                      "text": "Hello *Udapeople Dev Team*, \n\n This is to notify you that the job *$CIRCLE_JOB* with trigger name *${CIRCLE_USERNAME}*, committed to the repo *${CIRCLE_REPOSITORY_URL}* failed \n\n *Url:*${CIRCLE_BUILD_URL}",
                       "emoji": true
                     }
                   ]
