--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,7 +185,7 @@ jobs:
             cd frontend
             npm install
             npm run build
-      - send-notification
+      # - send-notification
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -204,7 +204,7 @@ jobs:
             cd backend
             npm install
             npm run build
-      - send-notification
+      # - send-notification
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
@@ -223,7 +223,7 @@ jobs:
             cd frontend
             npm install
             npm run test
-      - send-notification
+      # - send-notification
                 
   test-backend:
     docker:
@@ -443,10 +443,10 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
-      # - scan-backend:
-      #     requires: [build-backend]
-      # - scan-frontend:
-      #     requires: [build-frontend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
 #       - deploy-infrastructure:
 #           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
 #           filters:
