--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -294,12 +294,12 @@ jobs:
           command: |
             aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters "Name=tag:project,Values=udacity" \
-              --output text >> udapeople-project/.circleci/ansible/inventory.txt
+              --filters "Name=tag:project,Values=udapeople" \
+              --output text >> /.circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
-            - udapeople-project/.circleci/ansible/inventory.txt
+            - /.circleci/ansible/inventory.txt
       - destroy-environment     
 
 #   configure-infrastructure:
