--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -305,7 +305,7 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: python:3.7-alpine3.16
+      - image: amazon/aws-cli
     steps:
       - checkout
       - add_ssh_keys:
@@ -315,8 +315,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible tar gzip awscli
-            yum install -y tar gzip awscli
+            apk add --update ansible tar gzip
+            # yum install -y tar gzip awscli
       - run:
           name: Configure server
           command: |
