--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -315,8 +315,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible tar gzip
-            # yum install -y tar gzip awscli
+            apk add --update ansible
+            yum install -y tar gzip awscli
       - run:
           name: Configure server
           command: |
