--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -305,10 +305,12 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: python:3.7-alpine3.16
+      - image: alpine:latest
+
     steps:
       - checkout
-      - run: apt install -y tar gzip awscli
+      - run: apk add  --no-cache aws cli
+      - run: yum install -y tar gzip
       - add_ssh_keys:
           fingerprints: ["74:c4:c8:6c:7b:40:f5:a6:86:ba:44:8f:4e:8b:36:55"] 
       - attach_workspace:
