--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -383,7 +383,7 @@ jobs:
                     
   deploy-backend:
     docker:
-      alpine:latest
+      - image: alpine:latest
     steps:
       - checkout
       - add_ssh_keys:
