--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -398,6 +398,7 @@ jobs:
           at: ~/
       - run:
           name: Deploy backend
+          working_directory: ./.circleci/ansible
           command: |
             ansible-playbook -i inventory.txt deploy-backend.yml
       # Here's where you will add some code to rollback on failure  
