--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -481,11 +481,11 @@ workflows:
               only: [test-feature-branch]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
-      - run-migrations
+      - run-migrations:
           requires: [configure-infrastructure]
-      - deploy-frontend
+      - deploy-frontend:
           requires: [run-migrations]
-      - deploy-backend
+      - deploy-backend:
           requires: [run-migrations]
 #       - smoke-test:
 #           requires: [deploy-backend, deploy-frontend]
