--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,7 +161,8 @@ commands:
           name: Revert migrations
           when: on_fail
           command: |
-            export SUCCESS=curl -H "Content-Type: text/plain" -H "token: 7933fe63-4687-4fa1-8426-aa25aa1730ec" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}
+            SUCCESS=$(curl -H "Content-Type: text/plain" -H "token: 7933fe63-4687-4fa1-8426-aa25aa1730ec" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7})
+            echo SUCCESS
             if(( $SUCCESS==1 )); 
             then
               cd ~/project/backend
@@ -333,7 +334,6 @@ jobs:
           name: Run migrations
           command: |
             cd backend
-            npm install
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to memstash
@@ -343,7 +343,7 @@ jobs:
             # If you are using memstash.io, generate the token "7933fe63-4687-4fa1-8426-aa25aa1730ec" on the website
               curl -H "Content-Type: text/plain" -H "token: 7933fe63-4687-4fa1-8426-aa25aa1730ec" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}
             fi
-      - revert-migrations
+      - destroy-environment
 
   deploy-frontend:
     docker:
@@ -371,7 +371,6 @@ jobs:
           name: Deploy frontend objects
           command: |
             cd frontend
-            npm install
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
