--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -163,7 +163,7 @@ commands:
           command: |
             SUCCESS=$(curl --insecure https://kvdb.io/72vd4QF3J6RdodRpU7pSHV/migration_${CIRCLE_WORKFLOW_ID:0:7})
             echo SUCCESS
-            if(( $SUCCESS==1 )); 
+            if(( $SUCCESS==2 )); 
             then
               cd ~/project/backend
               npm install
@@ -343,7 +343,7 @@ jobs:
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
               echo "DB migration was successful"
-              curl https://kvdb.io/72vd4QF3J6RdodRpU7pSHV/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              curl --secure https://kvdb.io/72vd4QF3J6RdodRpU7pSHV/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '2'
             else
               echo "DB migration failed"
             fi
