--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -335,11 +335,11 @@ jobs:
           command: |
             cd backend
             npm install
-            npm run migrations > migrations_dump.txt
+            npm run migrations:revert
+            # npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb
           command: |
-            cat ~/project/backend/migrations_dump.txt
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
               echo "DB migration was successful"
