--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -376,7 +376,7 @@ jobs:
           command: |
             cd frontend
             npm run build
-            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+            # tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       # Here's where you will add some code to rollback on failure 
       - destroy-environment
@@ -393,13 +393,13 @@ jobs:
           name: Install dependencies
           command: |
             apk add --update ansible
-            apk add  --no-cache aws-cli tar gzip npm nodejs curl rsync
+            apk add  --no-cache aws-cli tar gzip npm nodejs curl rsync openssh
 
       - attach_workspace:
           at: ~/
       - run:
           name: Deploy backend
-          working_directory: ./.circleci/ansible
+          # working_directory: ./.circleci/ansible
           command: |
             cd backend
             npm i
