--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -41,5 +41,5 @@
   #   command: |
   #     pm2 start -f ./main.js
 
-    args:
-      chdir: /home/ubuntu/udapeople/dist
+    # args:
+    #   chdir: /home/ubuntu/udapeople/dist
