--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -406,10 +406,10 @@ jobs:
             npm i
             npm run build
             cd ..
-            tar -C backend -czvf artifact.tar.gz .
-            cd .circleci/ansible
+            tar -C backend -czvf artifact.tar.gz . 
             echo "Contents  of the inventory.txt file is -------"
-            cat inventory.txt
+            ls -a
+            # cat .circleci/ansible/inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
       # Here's where you will add some code to rollback on failure  
       - destroy-environment
