--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -407,10 +407,10 @@ jobs:
             npm run build
             cd ..
             tar -C backend -czvf artifact.tar.gz . 
-            echo "Contents  of the inventory.txt file is -------"
             ls -a
-            # cat .circleci/ansible/inventory.txt
-            ansible-playbook -i inventory.txt deploy-backend.yml
+            echo "Contents  of the inventory.txt file is -------"
+            cat .circleci/ansible/inventory.txt
+            ansible-playbook -i inventory.txt .circleci/ansible/deploy-backend.yml
       # Here's where you will add some code to rollback on failure  
       - destroy-environment
       - revert-migrations 
