--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -409,8 +409,8 @@ jobs:
             tar -C backend -czvf artifact.tar.gz . 
             ls -a
             echo "Contents  of the inventory.txt file is -------"
-            cat .circleci/ansible/inventory.txt
-            ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/deploy-backend.yml
+            cat ./.circleci/ansible/inventory.txt
+            ansible-playbook -i ./.circleci/ansible/inventory.txt .circleci/ansible/deploy-backend.yml
       # Here's where you will add some code to rollback on failure  
       - destroy-environment
       - revert-migrations 
