--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,46 +1,20 @@
 ---
-- name: "update apt packages."
-  become: yes
-  apt:
-    update_cache: yes
+- name: Extract Artifact
+  shell: |
+    tar xzvf artifact.tar.gz
 
-- name: "upgrade packages"
-  become: yes
-  apt:
-    upgrade: yes
+- name: cd artifact dir
+  shell: |
+    cd artifact
 
-- name: "install dependencies."
-  become: yes
-  apt:
-    name: ["nodejs", "npm"]
-    state: latest
-    update_cache: yes
-
-- name: "install pm2"
-  become: yes
-  npm:
-    name: pm2
-    global: yes
-    production: yes
-    state: present
-
-# - name: Extract Artifact
-#   shell: |
-#     tar -C backend -czvf artifact.tar.gz .
+- name: "stop previous app"
+  become: true
+  shell: |
+    pm2 stop default
 
 - name: "start app"
   become: true
   command: |
-    pm2 stop default
-    ls -a
-    tar xzvf artifact.tar.gz
-    cd artifact
-    pm2 start npm -- start
-
-  # - name: "start app"
-  #   become: true
-  #   command: |
-  #     pm2 start -f ./main.js
-
-    # args:
-    #   chdir: /home/ubuntu/udapeople/dist
+    pm2 start -f ./main.js
+  args:
+      chdir: /home/ubuntu/dist
